syntax = "proto3";

package auth;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Ping(Empty) returns (PingResponse);
  rpc Metrics(Empty) returns (MetricsResponse);
  rpc Health(Empty) returns (HealthResponse);
}

message Empty {}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int32 id = 1;
  string email = 2;
}

message PingResponse {
  int32 id = 1;
  string message = 2;
  string createdAt = 3;
}

message MetricsResponse {
  string metrics = 1;
}

message HealthResponse {
  string status = 1;
}